utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/ExcludeIncludedModule4.ide
package valid

typedef module ExcludeIncludedModule4 {

}
