utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/ExcludeIncludedModule4.ide
package invalid

typedef module ExcludeIncludedModule4 {

}
